@@ -1,3 +1,10 @@
+2008-08-14  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #489236
+
+	* mail/mail-stub-exchange.c: (get_folder_contents_online):
+	Update high_article_num properly to see all messages in the folder.
+
 2008-08-12  Milan Crha  <mcrha@redhat.com>
 
 	** Part of fix for bug #547308
